# bare-ndk

./: CMakeLists.txt  README.md  binding.cc  index.js  package.json  runtime.js
.github/workflows/: prebuild.yml  test.yml
lib/: activity.h  activity.js  runtime.c  runtime.cc  view.h  view.js  web-view.h  web-view.js
lib/runtime/: Activity.java
